syntax = "proto3";

import "google/protobuf/empty.proto";

package order;

message Error {
  string code = 1;
  string message = 2;
}

message Order {
  int32 id = 1;
  int32 parentId = 2;
  int32 sitterId = 3;
  string description = 4;
  string location = 5;
  int32 durationHours = 6;
  int32 durationMinutes = 7;
  int32 cost = 8;
  string kidsDescription = 9;
  string date = 10;
}

enum ProfileType {
  PARENT = 0;
  SITTER = 1;
}

enum OrderDateType {
  ACTUAL = 0;
  PASSED = 1;
}

message getOrderArg {
  int32 id = 1;
  ProfileType profileType = 2;
  OrderDateType orderDateType = 3;
}

message OrderArrayResult {
  repeated Order data = 1;
  optional Error _error = 100;
}

message OrderResult {
  optional Order data = 1;
  optional Error _error = 100;
}

service FuncOrderRpcService {
  rpc getActualOrders (google.protobuf.Empty) returns (OrderArrayResult);
  rpc getOrdersForUser (getOrderArg) returns (OrderArrayResult);
  rpc createOrder (Order) returns (OrderResult);
  rpc updateOrder (Order) returns (OrderResult);
}